Add i18n on dashboard

--- a/cdb/src/main/resources/i18n/message_en.properties
+++ b/cdb/src/main/resources/i18n/message_en.properties
@@ -1,12 +1,17 @@
+#Language
+lang.en=English
+lang.fr=French
+
 add.computer=Add Computer
 edit.computer=Edit Computer
 
 computer.name=Computer name
 introduced.date=Introduced date
-discontined.date=Discontinued date
+discontinued.date=Discontinued date
 company.name=Company Name
 company=Company
 
+# Add Edit
 or=or
 button.language=Language
 button.add=Add
