--- a/cdb/src/main/resources/i18n/message_fr.properties
+++ b/cdb/src/main/resources/i18n/message_fr.properties
@@ -1,19 +1,25 @@
+#Language
+lang.en=Anglais
+lang.fr=FranÃ§ais
+
 add.computer=Ajouter un ordinateur
 edit.computer=Modifer l'ordinateur
 
 computer.name=Nom de l'ordinateur
 introduced.date=Date d'introduction
-discontined.date=Date de retrait
+discontinued.date=Date de retrait
 company.name=Nom de la companie
-company=Companie
+company=Companies
+
+# Add Edit
 or=ou
 button.language=Langue
 button.add=Ajouter
 button.cancel=Annuler
 button.edit=Editer
 
-#Dashboard
-computer.found=Ordinateurs trouvés
-filter.by.name=Trié par nom
+# Dashboard
+computer.found=Ordinateurs trouvÃ©s
+filter.by.name=Trier par nom
 edit=Editer
-search.name=Nom à chercher
+search.name=Nom Ã  chercher
