Replace all controller classes by one classe, Refactor util package

--- a/cdb/src/main/resources/i18n/message_en.properties
+++ b/cdb/src/main/resources/i18n/message_en.properties
@@ -10,8 +10,10 @@ introduced.date=Introduced date
 discontinued.date=Discontinued date
 company.name=Company Name
 company=Company
+date.pattern=mm-dd-yyyy
 
 # Add Edit
+select.company=Select company
 or=or
 button.language=Language
 button.add=Add
