--- a/cdb/src/main/resources/i18n/message_fr.properties
+++ b/cdb/src/main/resources/i18n/message_fr.properties
@@ -9,9 +9,11 @@ computer.name=Nom de l'ordinateur
 introduced.date=Date d'introduction
 discontinued.date=Date de retrait
 company.name=Nom de la companie
-company=Companies
+company=Companie
+date.pattern=dd-mm-yyyy
 
 # Add Edit
+select.company=Choisisez une companie
 or=ou
 button.language=Langue
 button.add=Ajouter
