Add error message i18n

--- a/cdb/src/main/resources/i18n/message_en.properties
+++ b/cdb/src/main/resources/i18n/message_en.properties
@@ -25,3 +25,9 @@ computer.found=Computers found
 filter.by.name=Filter by name
 edit=Edit
 search.name=Search Name
+
+#
+validation.empty=Please enter the name
+validation.blank.char=No blank char alowed
+validation.start.blank=The name souldn't begin with blanck char
+validation.date=Incorrect date format
