--- a/cdb/src/main/resources/i18n/message_fr.properties
+++ b/cdb/src/main/resources/i18n/message_fr.properties
@@ -25,3 +25,9 @@ computer.found=Ordinateurs trouvés
 filter.by.name=Trier par nom
 edit=Editer
 search.name=Nom à chercher
+
+#Validation
+validation.empty=Entrez un nom
+validation.blank.char=Le nom est vide
+validation.start.blank=Le nom ne doit pas commencer par un caractère blanc
+valdiation.date=Mauvaise Date
