Spring security back (not verification into jsp), refacto jsp

--- a/cdb/webapp/src/main/resources/i18n/message_en.properties
+++ b/cdb/webapp/src/main/resources/i18n/message_en.properties
@@ -3,23 +3,15 @@ lang.en=English
 lang.fr=French
 flag=uk
 
+#Login
+username=Username
+password=Password
+login=Login
+login.error=Wrong username or password
+
+#Dashboard button
 add.computer=Add Computer
 edit.computer=Edit Computer
-
-computer.name=Computer name
-introduced.date=Introduced date
-discontinued.date=Discontinued date
-company.name=Company Name
-company=Company
-date.pattern=mm-dd-yyyy
-
-# Add Edit
-select.company=Select company
-or=or
-button.language=Language
-button.add=Add
-button.cancel=Cancel
-button.edit=Edit
 
 #Dashboard
 computer.found=Computers found
@@ -27,7 +19,22 @@ filter.by.name=Filter by name
 edit=Edit
 search.name=Search Name
 
-#
+# Add Edit
+computer.name=Computer name
+introduced.date=Introduced date
+discontinued.date=Discontinued date
+company.name=Company Name
+company=Company
+date.pattern=mm-dd-yyyy
+
+select.company=Select company
+or=or
+button.language=Language
+button.add=Add
+button.cancel=Cancel
+button.edit=Edit
+
+#Validation
 validation.empty=Please enter the name
 validation.blank.char=No blank char alowed
 validation.start.blank=The name souldn't begin with blanck char
