--- a/cdb/webapp/src/main/resources/i18n/message_fr.properties
+++ b/cdb/webapp/src/main/resources/i18n/message_fr.properties
@@ -3,9 +3,17 @@ lang.en=Anglais
 lang.fr=Français
 flag=fr
 
+#Login
+username=Identifiant
+password=Mot de passe
+login=Connexion
+login.error=Mauvais identifiant ou mot de passe
+
+#Dashboard button
 add.computer=Ajouter un ordinateur
 edit.computer=Modifer l'ordinateur
 
+# Add Edit
 computer.name=Nom de l'ordinateur
 introduced.date=Date d'introduction
 discontinued.date=Date de retrait
@@ -13,7 +21,6 @@ company.name=Nom de la companie
 company=Companie
 date.pattern=dd-mm-yyyy
 
-# Add Edit
 select.company=Choisisez une companie
 or=ou
 button.language=Langue
