Fix jquerry validation, header & i18n login

--- a/cdb/webapp/src/main/resources/i18n/message_en.properties
+++ b/cdb/webapp/src/main/resources/i18n/message_en.properties
@@ -8,6 +8,7 @@ username=Username
 password=Password
 login=Login
 login.error=Wrong username or password
+logout.success=You 've been logged out successfully
 
 #Dashboard button
 add.computer=Add Computer
