--- a/cdb/webapp/src/main/resources/i18n/message_fr.properties
+++ b/cdb/webapp/src/main/resources/i18n/message_fr.properties
@@ -8,6 +8,7 @@ username=Identifiant
 password=Mot de passe
 login=Connexion
 login.error=Mauvais identifiant ou mot de passe
+logout.success=Vous êtes déconnecté avec succès
 
 #Dashboard button
 add.computer=Ajouter un ordinateur
