Fix jquerry validation, header & i18n login

--- a/cdb/webapp/src/main/resources/i18n/message_fr.properties
+++ b/cdb/webapp/src/main/resources/i18n/message_fr.properties
@@ -7,6 +7,7 @@ flag=fr
 username=Identifiant
 password=Mot de passe
 login=Connexion
+logout=Déconnexion
 login.error=Mauvais identifiant ou mot de passe
 logout.success=Vous êtes déconnecté avec succès
 
