--- a/cdb/webapp/src/main/resources/i18n/message_en.properties
+++ b/cdb/webapp/src/main/resources/i18n/message_en.properties
@@ -7,6 +7,7 @@ flag=uk
 username=Username
 password=Password
 login=Login
+logout=Logout
 login.error=Wrong username or password
 logout.success=You 've been logged out successfully
 
