Replace apache-commons-validator by DateValidator, correct js date validation between 1970, 2038

--- a/cdb/webapp/src/main/resources/i18n/message_en.properties
+++ b/cdb/webapp/src/main/resources/i18n/message_en.properties
@@ -40,4 +40,4 @@ button.edit=Edit
 validation.empty=Please enter the name
 validation.blank.char=No blank char alowed
 validation.start.blank=The name souldn't begin with blanck char
-validation.date=Incorrect date format
+validation.date=Incorrect date format, Year should be between 1970 and 2037
